Bug 1318650 - Searching Places views by url became extremely slow. r=adw, a=gchang

MozReview-Commit-ID: 67SztEKHCn

--HG--
extra : source : b593a1ede43e42e1b6cf45c454ac28418e0632d1
extra : intermediate-source : ff1bde52cb38807453757f8b36ff03b5da968b16